--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "@tiptap/vue-3": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.7",
     "@tiptap/extension-dropcursor": "^2.11.7",
+    "@tiptap/extension-collaboration": "^2.11.7",
+    "@tiptap/extension-color": "^2.11.7",
+    "@tiptap/extension-drag-handle": "^2.11.7",
+    "@tiptap/extension-drag-handle-vue-3": "^2.11.7",
+    "@tiptap/extension-file-handler": "^2.11.7",
+    "@tiptap/extension-highlight": "^2.11.7",
+    "@tiptap/extension-history": "^2.11.7",
     "@tiptap/extension-image": "^2.11.7",
-    "@tiptap/extension-table": "^2.11.7",
+    "@tiptap/extension-node-range": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/extension-task-item": "^2.11.7",
+    "@tiptap/extension-task-list": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
     "@tiptap/extension-placeholder": "^2.11.7",
-    "sortablejs": "^1.15.2"
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/vue-3": "^2.11.5",
+    "vue": "^3.5.17",
+    "y-prosemirror": "^1.3.7",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0",
-    "@types/sortablejs": "^1.15.8"
+    "@vitejs/plugin-vue": "^6.0.0",
+    "sass": "^1.89.2",
+    "vite": "^7.0.4"
   }
 }
